[tool.poetry]
name = "mtuprobe"
version = "0.1.0"
description = "A tool to find out maximum MTU size on an IPv4 path"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"
readme = "README.md"
homepage = "https://github.com/Xowap/mtuprobe"
repository = "https://github.com/Xowap/mtuprobe"
documentation = "https://github.com/Xowap/mtuprobe"

[tool.poetry.scripts]
mtuprobe = 'mtuprobe.__main__:__main__'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
